--- a/CheaplayMVC/CheaplayMVC.csproj
+++ b/CheaplayMVC/CheaplayMVC.csproj
@@ -16,6 +16,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Quartz" Version="3.3.3" />
+    <PackageReference Include="Quartz.AspNetCore" Version="3.3.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SharkApiHelper\SharkApiHelper.csproj" />
   </ItemGroup>
 
 </Project>
