--- a/CheaplayMVC/CheaplayMVC.csproj
+++ b/CheaplayMVC/CheaplayMVC.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -18,6 +18,7 @@
     </PackageReference>
     <PackageReference Include="Quartz" Version="3.3.3" />
     <PackageReference Include="Quartz.AspNetCore" Version="3.3.3" />
+    <PackageReference Include="SendGrid" Version="9.25.1" />
   </ItemGroup>
 
   <ItemGroup>
